--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,7 @@
   file:
     path: /usr/local/share/applications
     state: directory
+    mode: 0775
   tags: postman
 - name: Install ansible
   include_role:
@@ -104,6 +105,7 @@
   file:
     path: "/opt/jid-{{ jid_version }}"
     state: directory
+    mode: 0775
   tags: jid
 - name: Install jid
   unarchive:
@@ -146,6 +148,7 @@
   file:
     path: /opt/Postman-{{ postman_version }}
     state: directory
+    mode: 0775
   tags: postman
 - name: Unarchive Postman App
   unarchive:
@@ -166,6 +169,7 @@
   template:
     src: templates/postman.desktop.j2
     dest: /usr/local/share/applications/postman.desktop
+    mode: 0664
   tags: postman
 - name: Gather installed packages
   package_facts:
