Migrate tests to molecule

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,6 +12,12 @@
         set +a
       }
   become: no
+- name: Update apt cache.
+  apt: update_cache=yes cache_valid_time=3600
+- name: Install dirmngr in order to be able to install the apt signing key
+  apt:
+    pkg:
+      - dirmngr
 - name: Install various dev packages
   apt:
     pkg: "{{ various_dev_apt_packages }}"
