See whether it builds without 1604

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         distro:
           - ubuntu2004
           - ubuntu1804
-          - ubuntu1604
+#          - ubuntu1604
           - debian10
           - debian9
     steps:
