Fix debian 10 incompatibility because of missing unzip package

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,6 +30,7 @@
     pkg:
       - dirmngr
       - apt-transport-https
+      - unzip
 - name: Install various dev packages
   apt:
     pkg: "{{ various_dev_apt_packages }}"
