Improve ripgrep install compatibility

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -187,29 +187,29 @@
     state: link
   tags: jid
 - name: install ripgrep
-  apt:
-    pkg: ripgrep
-  tags: ripgrep
-- name: Gather installed packages
-  package_facts:
-  tags: ripgrep
-- name: Determine whether ripgrep download required
-  set_fact:
-    ripgrep_download_required: "{{ ansible_facts.packages['ripgrep'][0]['version']|default(0)
-     is version (ripgrep_version, '<') }}"
-  tags: ripgrep
-- name: Download ripgrep {{ ripgrep_version }}
-  get_url:
-    url: https://github.com/BurntSushi/ripgrep/releases/download/{{ ripgrep_version }}/ripgrep_{{ ripgrep_version }}_amd64.deb
-    checksum: "sha1:{{ ripgrep_sha1 }}"
-    dest: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
-  tags: ripgrep
-  when: ripgrep_download_required
-- name: Install ripgrep {{ ripgrep_version }}
-  apt:
-    deb: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
-  tags: ripgrep
-  when: ripgrep_download_required
+  block:
+  - name: install ripgrep via pkg manager
+    apt:
+      pkg: ripgrep
+    tags: ripgrep
+  rescue:
+  - name: Determine whether ripgrep download required
+    set_fact:
+      ripgrep_download_required: "{{ ansible_facts.packages['ripgrep'][0]['version']|default(0)
+      is version (ripgrep_version, '<') }}"
+    tags: ripgrep
+  - name: Download ripgrep {{ ripgrep_version }}
+    get_url:
+      url: https://github.com/BurntSushi/ripgrep/releases/download/{{ ripgrep_version }}/ripgrep_{{ ripgrep_version }}_amd64.deb
+      checksum: "sha1:{{ ripgrep_sha1 }}"
+      dest: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
+    tags: ripgrep
+    when: ripgrep_download_required
+  - name: Install ripgrep {{ ripgrep_version }}
+    apt:
+      deb: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
+    tags: ripgrep
+    when: ripgrep_download_required
 - name: Install bump2version aka bumpversion
   include_role:
     name: baztian.pip_venv
