--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -126,7 +126,7 @@
   vars:
       pkg: molecule{{ molecule_flavour }}
       dir: molecule
-      version: "{{ molecule_version }}"
+      version: "{{ molecule_effective_version }}"
   tags: molecule
 - name: Install yq
   include_role:
