Revert "Try to fix biuld"
This reverts commit bd64a3f21b423f8d721e29dbded90a4da88a9226.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -126,7 +126,7 @@
   vars:
       pkg: molecule{{ molecule_flavour }}
       dir: molecule
-      version: "{{ molecule_effective_version }}"
+      version: "{{ molecule_version }}"
   tags: molecule
 - name: Install yq
   include_role:
