--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
       - "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
       - "{{ ansible_os_family }}.yml"
       - "default.yml"
-    - skip: true
+      skip: true
 
 - name: Add dotenv approach
   blockinfile:
