--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,6 @@
       - "{{ ansible_os_family }}.yml"
       - "default.yml"
       skip: true
-
 - name: Add dotenv approach
   blockinfile:
     path: ~/.bashrc
@@ -56,45 +55,46 @@
     state: directory
     mode: 0775
   tags: postman
-- name: Add PPA Key for ansible
-  apt_key:
-    id: 6125E2A8C77F2818FB7BD15B93C4A3FD7BB9C367
-    keyserver: keyserver.ubuntu.com
-  tags: ansible
-- name: Extract distribution base name (works on linux mint as well)
-  command: grep -oP '{{ "VERSION" if ansible_distribution == "Debian" else "UBUNTU" }}_CODENAME=\K.*' /etc/os-release
-  register: distro
-  changed_when: False
-- name: Add ansible PPA (deb) if available
-  apt_repository:
-    repo: deb http://ppa.launchpad.net/ansible/ansible/ubuntu {{ distro.stdout }} main
-  ignore_errors: yes
-  tags: ansible
-- name: Add ansible PPA (deb-src) if available
-  apt_repository:
-    repo: deb-src http://ppa.launchpad.net/ansible/ansible/ubuntu {{ distro.stdout }} main
-  ignore_errors: yes
-  tags: ansible
-- name: Install ansible packages
-  apt:
-    pkg: ansible
-  tags: ansible
-- name: Setup ansible python interpreter version
-  ini_file:
-    path: /etc/ansible/ansible.cfg
-    section: defaults
-    option: "{{ item.option }}"
-    value: "{{ item.value }}"
-    mode: '0644'
-  with_items:
-    - option: interpreter_python
-      value: /usr/bin/python3
-    - option: nocows
-      value: "1"
-    - option: stdout_callback
-      value: yaml
-    - option: stderr_callback
-      value: yaml
+- name: Install ansible
+  block:
+  - name: Add PPA Key for ansible
+    apt_key:
+      id: 6125E2A8C77F2818FB7BD15B93C4A3FD7BB9C367
+      keyserver: keyserver.ubuntu.com
+  - name: Extract Ubuntu distribution base name (works on linux mint as well)
+    command: grep -oP 'UBUNTU_CODENAME=\K.*' /etc/os-release
+    register: ansible_ubuntu_distro
+    changed_when: False
+    when: ansible_distribution != "Debian" # also includes mint
+  - name: Set ansible ppa distribution name
+    set_fact:
+      ansible_ppa_distro: "{{ 'trusty' if ansible_distribution == 'Debian' else ansible_ubuntu_distro.stdout }}"
+  - name: Add ansible PPA (deb) if available
+    apt_repository:
+      repo: deb http://ppa.launchpad.net/ansible/ansible/ubuntu {{ ansible_ppa_distro }} main
+  - name: Add ansible PPA (deb-src) if available
+    apt_repository:
+      repo: deb-src http://ppa.launchpad.net/ansible/ansible/ubuntu {{ ansible_ppa_distro }} main
+  always:
+  - name: Install ansible packages
+    apt:
+      pkg: ansible
+  - name: Setup ansible python interpreter version
+    ini_file:
+      path: /etc/ansible/ansible.cfg
+      section: defaults
+      option: "{{ item.option }}"
+      value: "{{ item.value }}"
+      mode: '0644'
+    with_items:
+      - option: interpreter_python
+        value: /usr/bin/python3
+      - option: nocows
+        value: "1"
+      - option: stdout_callback
+        value: yaml
+      - option: stderr_callback
+        value: yaml
   tags: ansible
 - name: Install ansible-lint
   block:
