--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -49,12 +49,6 @@
   apt:
     pkg: insomnia
   tags: insomnia
-- name: Create launcher directory
-  file:
-    path: /usr/local/share/applications
-    state: directory
-    mode: 0775
-  tags: postman
 - name: Install ansible
   block:
   - name: Add PPA Key for ansible
@@ -98,9 +92,15 @@
   tags: ansible
 - name: Install ansible-lint
   block:
+  - name: Add stretch-backports so that ansible-lint is available
+    apt_repository:
+      repo: deb http://deb.debian.org/debian stretch-backports main
+    when: ansible_distribution == "Debian" and ansible_distribution_major_version == "9"
+    register: stretch_backports
   - name: Install ansible-lint via package manager
     apt:
       pkg: ansible-lint
+      default_release: "{{ 'stretch-backports' if not stretch_backports.skipped is defined else None }}"
     tags: ansible_lint
   rescue:
   - name: Install ansible-lint without package manager
