--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -103,6 +103,9 @@
       default_release: "{{ 'stretch-backports' if not stretch_backports.skipped is defined else None }}"
     tags: ansible_lint
   rescue:
+  - name: Install python3-cryptography
+    apt:
+      pkg: python3-cryptography
   - name: Install ansible-lint without package manager
     include_role:
       name: baztian.pip_venv
