--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -130,6 +130,8 @@
       pkg: molecule{{ molecule_flavour }}
       dir: molecule
       version: "{{ molecule_version }}"
+  # Skip for ubuntu 16.04 or Linux mint based on that version
+  when: not (ansible_distribution != "Debian" and ansible_distribution_major_version == "16")
   tags: molecule
 - name: Install yq
   include_role:
