--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   role_name: dev_tools
   description: Role for installing various tools related to development tasks
   license: MIT
-  min_ansible_version: 2.0
+  min_ansible_version: '2.0'
   platforms:
   - name: Ubuntu
     versions:
