--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,6 +42,7 @@
     pkg: insomnia
   tags: insomnia
 - name: Install ansible
+  tags: ansible
   block:
   - name: Add PPA Key for ansible
     apt_key:
@@ -81,7 +82,6 @@
         value: yaml
       - option: stderr_callback
         value: yaml
-  tags: ansible
 - name: Install ansible-lint
   block:
   - name: Add stretch-backports so that ansible-lint is available
@@ -162,13 +162,14 @@
     url: "https://github.com/simeji/jid/releases/download/v{{ jid_version }}/jid_linux_amd64.zip"
     checksum: "sha256:{{ jid_sha256 }}"
     dest: "/tmp/jid-{{ jid_version }}.zip"
+    mode: 0644
   tags: jid
   when: not jid_directory.stat.exists
 - name: Create jid directory
   file:
     path: "/opt/jid-{{ jid_version }}"
     state: directory
-    mode: 0775
+    mode: 0755
   tags: jid
 - name: Install jid
   unarchive:
@@ -199,9 +200,9 @@
       pkg: git+https://github.com/baztian/json2html.git@command-line
       dir: json2html
   tags: json2html
-- name: install ripgrep
+- name: Install ripgrep
   block:
-  - name: install ripgrep via pkg manager
+  - name: Install ripgrep via pkg manager
     apt:
       pkg: ripgrep
     tags: ripgrep
@@ -211,6 +212,7 @@
       url: https://github.com/BurntSushi/ripgrep/releases/download/{{ ripgrep_version }}/ripgrep_{{ ripgrep_version }}_amd64.deb
       checksum: "sha1:{{ ripgrep_sha1 }}"
       dest: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
+      mode: 0644
     tags: ripgrep
   - name: Install ripgrep {{ ripgrep_version }}
     apt:
