--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,11 +7,11 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - bionic
+    - jammy
     - focal
   - name: Debian
     versions:
-    - buster
+    - bullseye
   galaxy_tags:
     - development
     - dev
