--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -126,11 +126,19 @@
       tags:
         - molecule
   vars:
-      pkg: molecule{{ molecule_flavour }}
-      dir: molecule
+      pkg: molecule
       version: "{{ molecule_version }}"
-  # Skip for ubuntu 16.04 or Linux mint based on that version
-  when: not (ansible_distribution != "Debian" and ansible_distribution_major_version == "16")
+  tags: molecule
+- name: Install molecule-docker
+  include_role:
+    name: baztian.pip_venv
+    apply:
+      tags:
+        - molecule
+  vars:
+      pkg: molecule-docker
+      dir: molecule
+      version: "{{ molecule_docker_version }}"
   tags: molecule
 - name: Install yq
   include_role:
